[package]
name = "audio_visualizer"
version = "0.1.0"
authors = ["PitchBlackNights <pitchblacknights@proton.me>"]
edition = "2021"
rust-version = "1.85"
description = ""
readme = "./README.md"
repository = "https://github.com/PitchBlackNights/audio_visualizer"
publish = false

[dependencies]
env_logger = "0.11.6"
log = "0.4.22"
colored = "3.0.0"
chrono = "0.4.39"
clap = { version = "4.5.26", features = ["cargo"] }
once_cell = "1.20.2"

# Frozen to latest major version in this tutorial: https://www.youtube.com/watch?v=I8Uf7akOYo0
winit = "0.29.15"
wgpu = "0.19.4"

[build-dependencies]
vergen-git2 = { version = "1.0.3", features = ["build", "cargo", "rustc", "si"]}
