[package]
name = "audio_visualizer"
version = "0.1.0"
authors = ["PitchBlackNights <pitchblacknights@proton.me>"]
edition = "2021"
rust-version = "1.85"
description = ""
readme = "./README.md"
repository = "https://github.com/PitchBlackNights/audio_visualizer"
publish = false

[dependencies]
env_logger = "0.11"
log = "0.4"
colored = "3.0"
chrono = "0.4"
clap = { version = "4.5", features = ["cargo"] }
once_cell = "1.20"
winit = { version = "0.29", features = ["rwh_05"] }
wgpu = "22.0"
pollster = "0.3"

[build-dependencies]
vergen-git2 = { version = "1.0.3", features = ["build", "cargo", "rustc", "si", "emit_and_set"]}
